--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <div class="info-content">
           <h1 class="name" title="Shawn Tan">Shawn Tan</h1>
 
-          <p class="title">Freelance Data Neuroscientist. Indie Hacker</p>
+          <p class="title">Freelance Data Scientist.</p>
+          <p class="title">Indie Hacker.</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -129,21 +130,33 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+              <ion-icon name="logo-linkedin">"https://www.linkedin.com/in/shawn-tan-873237b1/"</ion-icon>
             </a>
           </li>
 
           <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="school-outline">"https://scholar.google.com.sg/citations?user=nbOGFCEAAAAJ&hl=en"</ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon name="logo-github">"https://www.linkedin.com/in/shawn-tan-873237b1/"</ion-icon>
+            </a>
+          </li>
+          
+          <!-- <li class="social-item">
             <a href="#" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
-          <li class="social-item">
+          <!-- <li class="social-item">
             <a href="#" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
         </ul>
 
