v3 fixed social links

--- a/index.html
+++ b/index.html
@@ -129,20 +129,20 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-linkedin">"https://www.linkedin.com/in/shawn-tan-873237b1/"</ion-icon>
+            <a href="#" class="social-link">"https://www.linkedin.com/in/shawn-tan-873237b1/"
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="school-outline">"https://scholar.google.com.sg/citations?user=nbOGFCEAAAAJ&hl=en"</ion-icon>
+            <a href="#" class="social-link">"https://scholar.google.com.sg/citations?user=nbOGFCEAAAAJ&hl=en"
+              <ion-icon name="school-outline"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-github">"https://www.linkedin.com/in/shawn-tan-873237b1/"</ion-icon>
+            <a href="#" class="social-link">"https://www.linkedin.com/in/shawn-tan-873237b1/"
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
           
