--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">"https://www.linkedin.com/in/shawn-tan-873237b1/"
+            <a href="https://www.linkedin.com/in/shawn-tan-873237b1/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">"https://scholar.google.com.sg/citations?user=nbOGFCEAAAAJ&hl=en"
+            <a href="https://scholar.google.com.sg/citations?user=nbOGFCEAAAAJ&hl=en" class="social-link">
               <ion-icon name="school-outline"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">"https://www.linkedin.com/in/shawn-tan-873237b1/"
+            <a href="https://github.com/banchan86" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
