v5 fixed up main page

--- a/index.html
+++ b/index.html
@@ -222,17 +222,14 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I am an experienced neuroscientist with a strong publication record and a background in molecular, cellular and systems neuroscience. 
+            I am versatile in a wide variety of traditional and cutting edge neuroscience techniques, including molecular biology, microscopy, animal behaviour, electrophysiology and optogenetics (10+years wet lab experience). 
+            I am looking to transition to an industry role as a field application scientist or scientist.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            In my spare time, I also like to play with data and am proficient in statistics, coding, data science and machine learning (3+years experience with Python/Pandas/Scikit-learn/etc).
+            Check out the other tabs to take a look at some of my past projects!
           </p>
         </section>
 
@@ -241,7 +238,7 @@
           - service
         -->
 
-        <section class="service">
+        <!-- <section class="service">
 
           <h3 class="h3 service-title">What i'm doing</h3>
 
@@ -314,13 +311,13 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
           - testimonials
         -->
-
+<!--
         <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
@@ -418,13 +415,13 @@
           </ul>
 
         </section>
-
+-->
 
         <!--
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+        <!-- <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -463,12 +460,13 @@
           </section>
 
         </div>
-
+-->
 
         <!--
           - clients
         -->
 
+        <!--
         <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
@@ -515,7 +513,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
