v7 trying another fix

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
           - clients
         -->
 
-        <!--
+        
         <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
@@ -511,7 +511,7 @@
 
           </ul>
 
-        </section>-->
+        </section>
 
       </article>
 
