v8 trying another fix

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           - testimonials modal
         -->
 
-        <!-- <div class="modal-container" data-modal-container>
+         <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -458,9 +458,10 @@
             </div>
 
           </section>
-
+        
         </div>
--->
+
+
 
         <!--
           - clients
