testing another paragraph tag

--- a/index.html
+++ b/index.html
@@ -555,11 +555,13 @@
                 overexpress transgenes to study cellular changes of transgene expression.
                 </p>
 
-                <p>
+
+
+              </p>
+
+              <p class="timeline-text">
                 • Published 2 first author and 3 collaborative publications with animal/cellular models of neuropsychiatric disorders in internationally recognized
                 journals.
-                </p>
-                
               </p>
 
             </li>
