propagated paragraph tags for resume portion

--- a/index.html
+++ b/index.html
@@ -545,18 +545,13 @@
               <span>DUKE-NUS Medical School</span>
 
               <p class="timeline-text">
-                <p>
                 • Utilized behavioral assays, in-situ hybridisation, drug dosing, immunohistochemstry, western blot, qPCR, confocal microscopy,
                 electrophysiology to investigate behavioral, molecular and cellular changes in transgenic mice models of human neuropsychiatric disorders.
-                </p>
+              </p>
 
-                <p>
+              <p class="timeline-text">
                 • Performed molecular cloning, tissue dissociation, primary mice neuron and hek293 cell culture, transfection and electroporation to knockdown and
                 overexpress transgenes to study cellular changes of transgene expression.
-                </p>
-
-
-
               </p>
 
               <p class="timeline-text">
@@ -576,10 +571,14 @@
                 • Consulted on and designed, setup custom hardware/software for assaying
                 mice behavioral responses for independent and collaborative team
                 projects, leading to 1 publication in a high impact journal (Nature).
+              </p>
 
+              <p class="timeline-text">
                 • Setup new data analysis/machine learning pipelines for analyzing and
                 extracting insights from mice behavioral videos.
+              </p>
 
+              <p class="timeline-text">
                 • Performed stereotaxic surgery for craniotomy, virus injection and fiber
                 photometry/optogenetics/electrode implants to monitor and manipulate invivo
                 neural activity in mice.
