added teaching experience section

--- a/index.html
+++ b/index.html
@@ -626,8 +626,6 @@
 
               <p class="timeline-text">
                 PhD in Neuroscience
-                
-
               </p>
 
             </li>
@@ -647,6 +645,72 @@
           </ol>
 
         </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Teaching/Science Outreach</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">NUS Graduate School's Integrative Sciences and Engineering</h4>
+
+              <span> 2012-2013</span>
+
+              <p class="timeline-text">
+              Organizer and Chairman for NUS Graduate School for Integrative Sciences and Engineering 4th and 5th Student Symposium.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">National University of Singapore (NUS)</h4>
+
+              <span>2012-2013</span>
+
+              <p class="timeline-text">
+              Teaching assistant for Singapore Technological Endowment Program(STEP)/NUS Sunburst Brain Camp.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">National University of Singapore (NUS)</h4>
+
+              <span>2012</span>
+
+              <p class="timeline-text">
+              Teaching assistant for PL3253: Psychobiological Perspective of Emotions.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">National University of Singapore (NUS)</h4>
+
+              <span>2012</span>
+
+              <p class="timeline-text">
+              Postgraduate mentor for Brain Book (a collaborative effort on a neuroscience book for adolescents).
+              </p>
+
+            </li>
+
+
+          </ol>
+
+        </section>
+        
 
         <section class="skill">
 
