added publications page

--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
           </li>
 
           <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Publications</button>
+          </li>
+
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
@@ -767,6 +771,61 @@
         </section>
 
       </article>
+
+      <!--
+        - #Publications
+      -->
+
+      <article class="publications" data-page="publications">
+
+        <header>
+          <h2 class="h2 article-title">Publications</h2>
+        </header>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Publications</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</h4>
+
+              <span>Nature 623, 387–396 (2023)</span>
+
+              <p class="timeline-text">
+              Jonathan W Lovelace, Jingrui Ma, Saurabh Yadav, Karishma Chhabria, Hanbing Shen, Zhengyuan Pang, Tianbo Qi, Ruchi Sehgal, 
+              Yunxiao Zhang, Tushar Bali, Thomas Vaissiere, <u>Shawn Tan</u>, Yuejia Liu, Gavin Rumbaugh, Li Ye, David Kleinfeld, Carsen Stringer, 
+              Vineet Augustine
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Bespoke behavior: mechanisms that modulate pheromone-triggered behavior</h4>
+
+              <span>Current Opinion in Neurobiology 64, 143-150</span>
+
+              <p class="timeline-text">
+              <u>Shawn Tan</u>, Lisa Stowers
+              </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+      </article>
+
 
       <!--
         - #PORTFOLIO
