added link to publications

--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
 
               <h4 class="h4 timeline-item-title">Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</h4>
 
-              <span>Nature 623, 387–396 (2023)</span>
+              <span>Nature 623, 387–396 (2023). <a href = "https://doi.org/10.1038/s41586-023-06680-7"> Link </a> </span>
 
               <p class="timeline-text">
               Jonathan W Lovelace, Jingrui Ma, Saurabh Yadav, Karishma Chhabria, Hanbing Shen, Zhengyuan Pang, Tianbo Qi, Ruchi Sehgal, 
@@ -812,7 +812,7 @@
 
               <h4 class="h4 timeline-item-title">Bespoke behavior: mechanisms that modulate pheromone-triggered behavior</h4>
 
-              <span>Current Opinion in Neurobiology 64, 143-150</span>
+              <span>Current Opinion in Neurobiology 64, 143-150 (2020). <a href = "https://doi.org/10.1016/j.conb.2020.05.003"> Link </a></span>
 
               <p class="timeline-text">
               <u>Shawn Tan</u>, Lisa Stowers
