--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
 
               <h4 class="h4 timeline-item-title">Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</h4>
 
-              <span>Nature 623, 387–396 (2023). <a href = "https://doi.org/10.1038/s41586-023-06680-7"> Link </a> </span>
+              <span>Nature 623, 387–396 (2023) <a href = "https://doi.org/10.1038/s41586-023-06680-7"> Link </a> </span>
 
               <p class="timeline-text">
               Jonathan W Lovelace, Jingrui Ma, Saurabh Yadav, Karishma Chhabria, Hanbing Shen, Zhengyuan Pang, Tianbo Qi, Ruchi Sehgal, 
@@ -812,10 +812,72 @@
 
               <h4 class="h4 timeline-item-title">Bespoke behavior: mechanisms that modulate pheromone-triggered behavior</h4>
 
-              <span>Current Opinion in Neurobiology 64, 143-150 (2020). <a href = "https://doi.org/10.1016/j.conb.2020.05.003"> Link </a></span>
+              <span>Current Opinion in Neurobiology 64, 143-150 (2020) <a href = "https://doi.org/10.1016/j.conb.2020.05.003"> Link </a></span>
 
               <p class="timeline-text">
               <u>Shawn Tan</u>, Lisa Stowers
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Prenatal selective serotonin reuptake inhibitor (SSRI) exposure induces working memory and social recognition deficits by disrupting inhibitory synaptic networks in male mice</h4>
+
+              <span>Molecular Brain 12(1), 29 (2019) <a href = "https://doi.org/10.1186/s13041-019-0452-5"> Link </a></span>
+
+              <p class="timeline-text">
+              Weonjin Yu, Yi-Chun Yen, Young-Hwan Lee, <u>Shawn Tan</u>, Yixin Xiao, Hidayat Lokman, Audrey Khoo Tze Ting, Hasini Ganegala, Taejoon Kwon, Won-Kyung Ho, Hyunsoo Shawn Je
+              </p>
+
+            </li>
+
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Postnatal TrkB ablation in corticolimbic interneurons induces social dominance in male mice</h4>
+
+              <span>Proceedings of the National Academy of Sciences 115(42), E9909-E9915 (2018) <a href = "https://doi.org/10.1073/pnas.1812083115"> Link </a></span>
+
+              <p class="timeline-text">
+                <u>Shawn Tan</u>, Yixin Xiao, Henry H Yin, Albert I Chen, Tuck Wah Soong, Hyunsoo Shawn Je
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Maternal separation does not produce a significant behavioral change in mice</h4>
+
+              <span>Experimental Neurobiology 26(6), 390-398 (2017) <a href = "https://doi.org/10.5607/en.2017.26.6.390"> Link </a></span>
+
+              <p class="timeline-text">
+                <u>Shawn Tan</u>, Hin San Ho, Anna Yoonsu Song, Joey Low, Hyunsoo Shawn Je
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Direct induction and functional maturation of forebrain GABAergic neurons from human pluripotent stem cells</h4>
+
+              <span>Cell reports 16(7), 1942-1953 (2016) <a href = "https://doi.org/10.1016/j.celrep.2016.07.035"> Link </a></span>
+
+              <p class="timeline-text">
+                Alfred Xuyang Sun, Qiang Yuan, <u>Shawn Tan</u>, Yixin Xiao, Danlei Wang, Audrey Tze Ting Khoo, Levena Sani, Hoang-Dai Tran, Paul Kim, Yong Seng Chiew, Kea Joo Lee, Yi-Chun Yen, Huck Hui Ng, Bing Lim, Hyunsoo Shawn Je
+              </p>
+
+            </li>
+
+            
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Regulation of brain-derived neurotrophic factor exocytosis and gamma-aminobutyric acidergic interneuron synapse by the schizophrenia susceptibility gene dysbindin-1</h4>
+
+              <span>Biological Psychiatry 80(4), 312-322 (2016) <a href = "https://doi.org/10.1016/j.biopsych.2015.08.019"> Link </a></span>
+
+              <p class="timeline-text">
+                Qiang Yuan, Feng Yang, Yixin Xiao, <u>Shawn Tan</u>, Nilofer Husain, Ming Ren, Zhonghua Hu, Keri Martinowich, Julia S Ng, Paul J Kim, Weiping Han, Koh-ichi Nagata, Daniel R Weinberger, Hyunsoo Shawn Je
               </p>
 
             </li>
