shifted link for publications

--- a/index.html
+++ b/index.html
@@ -796,9 +796,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</h4>
+              <h4 class="h4 timeline-item-title"><a href = "https://doi.org/10.1038/s41586-023-06680-7"></a>Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</a></h4>
 
-              <span>Nature 623, 387–396 (2023) <a href = "https://doi.org/10.1038/s41586-023-06680-7"> Link </a> </span>
+              <span>Nature 623, 387–396 (2023)</span>
 
               <p class="timeline-text">
               Jonathan W Lovelace, Jingrui Ma, Saurabh Yadav, Karishma Chhabria, Hanbing Shen, Zhengyuan Pang, Tianbo Qi, Ruchi Sehgal, 
