shifted resume sections around, changed formatting of education and tried shifting code for the link

--- a/index.html
+++ b/index.html
@@ -544,33 +544,6 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">PhD Student and Postdoctoral Fellow</h4>
-
-              <span>DUKE-NUS Medical School</span>
-
-              <p class="timeline-text">
-                • Utilized behavioral assays, in-situ hybridisation, drug dosing, immunohistochemstry, western blot, qPCR, confocal microscopy,
-                electrophysiology to investigate behavioral, molecular and cellular changes in transgenic mice models of human neuropsychiatric disorders.
-              </p>
-
-              <br>
-
-              <p class="timeline-text">
-                • Performed molecular cloning, tissue dissociation, primary mice neuron and hek293 cell culture, transfection and electroporation to knockdown and
-                overexpress transgenes to study cellular changes of transgene expression.
-              </p>
-
-              <br>
-
-              <p class="timeline-text">
-                • Published 2 first author and 3 collaborative publications with animal/cellular models of neuropsychiatric disorders in internationally recognized
-                journals.
-              </p>
-
-            </li>
-
-            <li class="timeline-item">
-
               <h4 class="h4 timeline-item-title">Postdoctoral Associate</h4>
 
               <span>The Scripps Research Institute 2019-2023</span>
@@ -598,6 +571,35 @@
 
             </li>
 
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">PhD Student and Postdoctoral Fellow</h4>
+
+              <span>DUKE-NUS Medical School 2011-2019</span>
+
+              <p class="timeline-text">
+                • Utilized behavioral assays, in-situ hybridisation, drug dosing, immunohistochemstry, western blot, qPCR, confocal microscopy,
+                electrophysiology to investigate behavioral, molecular and cellular changes in transgenic mice models of human neuropsychiatric disorders.
+              </p>
+
+              <br>
+
+              <p class="timeline-text">
+                • Performed molecular cloning, tissue dissociation, primary mice neuron and hek293 cell culture, transfection and electroporation to knockdown and
+                overexpress transgenes to study cellular changes of transgene expression.
+              </p>
+
+              <br>
+
+              <p class="timeline-text">
+                • Published 2 first author and 3 collaborative publications with animal/cellular models of neuropsychiatric disorders in internationally recognized
+                journals.
+              </p>
+
+            </li>
+
+
+
           </ol>
 
         </section>
@@ -616,25 +618,17 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">NUS Graduate School's Integrative Sciences and Engineering</h4>
+              <h4 class="h4 timeline-item-title">PhD in Neuroscience</h4>
 
-              <span> 2011 — 2017</span>
-
-              <p class="timeline-text">
-                PhD in Neuroscience
-              </p>
+              <span> NUS Graduate School for Integrative Sciences and Engineering 2011 — 2017</span>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">National University of Singapore (NUS)</h4>
+              <h4 class="h4 timeline-item-title">BSSc (Honors) in Psychology</h4>
 
-              <span>2007-2011</span>
-
-              <p class="timeline-text">
-                BSSc (Honors) in Psychology
-              </p>
+              <span>National University of Singapore (NUS) 2007-2011</span>
 
             </li>
 
@@ -796,7 +790,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title"><a href = "https://doi.org/10.1038/s41586-023-06680-7"></a>Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</a></h4>
+              <h4 class="h4 timeline-item-title"><a href = "https://doi.org/10.1038/s41586-023-06680-7">Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</a></h4>
 
               <span>Nature 623, 387–396 (2023)</span>
 
