added link icon

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
               <p class="timeline-text">
               Jonathan W Lovelace, Jingrui Ma, Saurabh Yadav, Karishma Chhabria, Hanbing Shen, Zhengyuan Pang, Tianbo Qi, Ruchi Sehgal, 
               Yunxiao Zhang, Tushar Bali, Thomas Vaissiere, <u>Shawn Tan</u>, Yuejia Liu, Gavin Rumbaugh, Li Ye, David Kleinfeld, Carsen Stringer, 
-              Vineet Augustine
+              Vineet Augustine <ion-icon name="link-outline"></ion-icon>
               </p>
 
             </li>
