--- a/index.html
+++ b/index.html
@@ -790,14 +790,14 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title"><a href = "https://doi.org/10.1038/s41586-023-06680-7">Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</a></h4>
+              <h4 class="h4 timeline-item-title">Vagal sensory neurons mediate the Bezold–Jarisch reflex and induce syncope</h4>
 
               <span>Nature 623, 387–396 (2023)</span>
 
               <p class="timeline-text">
               Jonathan W Lovelace, Jingrui Ma, Saurabh Yadav, Karishma Chhabria, Hanbing Shen, Zhengyuan Pang, Tianbo Qi, Ruchi Sehgal, 
               Yunxiao Zhang, Tushar Bali, Thomas Vaissiere, <u>Shawn Tan</u>, Yuejia Liu, Gavin Rumbaugh, Li Ye, David Kleinfeld, Carsen Stringer, 
-              Vineet Augustine <ion-icon name="link-outline"></ion-icon>
+              Vineet Augustine <a href = "https://doi.org/10.1038/s41586-023-06680-7"><ion-icon name="link-outline"></ion-icon></a>
               </p>
 
             </li>
