--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
           </li>
 
           <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Skills</button>
+          </li>
+
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
@@ -267,64 +271,7 @@
         
         </div>
 
-
-
-        <!--
-          - clients
-        -->
-
-        <!--
-        <section class="clients">
-
-          <h3 class="h3 clients-title">Clients</h3>
-
-          <ul class="clients-list has-scrollbar">
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
-              </a>
-            </li>
-
-          </ul>
-
-        </section>
-      -->
       </article>
-
-
-
-
 
       <!--
         - #RESUME
@@ -449,6 +396,54 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
+            <h3 class="h3">Awards</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Dorris Neuroscience Award</h4>
+
+              <span> The Scripps Research Institute 2021/2023</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Khoo Postdoctoral Fellowship Award</h4>
+
+              <span>Duke-NUS Medical School 2017</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">NUS Graduate School For Integrative Sciences and Engineering Scholarship</h4>
+
+              <span>National University of Singapore 2011</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Dean's List</h4>
+
+              <span>National University of Singapore 2008/2009</span>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
             <h3 class="h3">Teaching/Science Outreach</h3>
           </div>
 
@@ -506,70 +501,9 @@
           </ol>
 
         </section>
+
+
         
-
-        <section class="skill">
-
-          <h3 class="h3 skills-title">My skills</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section>
-
       </article>
 
       <!--
@@ -602,7 +536,7 @@
 
               <p class="timeline-text">
               Jonathan W Lovelace, Jingrui Ma, Saurabh Yadav, Karishma Chhabria, Hanbing Shen, Zhengyuan Pang, Tianbo Qi, Ruchi Sehgal, 
-              Yunxiao Zhang, Tushar Bali, Thomas Vaissiere, <b>Shawn Tan</b>, Yuejia Liu, Gavin Rumbaugh, Li Ye, David Kleinfeld, Carsen Stringer, 
+              Yunxiao Zhang, Tushar Bali, Thomas Vaissiere, <u>Shawn Tan</u>, Yuejia Liu, Gavin Rumbaugh, Li Ye, David Kleinfeld, Carsen Stringer, 
               Vineet Augustine <a href = "https://doi.org/10.1038/s41586-023-06680-7"><u>Link</u></a>
               </p>
 
@@ -615,7 +549,7 @@
               <span>Current Opinion in Neurobiology 64, 143-150 (2020)</span>
 
               <p class="timeline-text">
-              <b>Shawn Tan</b>, Lisa Stowers
+              <u>Shawn Tan</u>, Lisa Stowers
               <a href = "https://doi.org/10.1016/j.conb.2020.05.003"><u>Link</u></a>
               </p>
 
@@ -685,6 +619,81 @@
                 Qiang Yuan, Feng Yang, Yixin Xiao, <u>Shawn Tan</u>, Nilofer Husain, Ming Ren, Zhonghua Hu, Keri Martinowich, Julia S Ng, Paul J Kim, Weiping Han, Koh-ichi Nagata, Daniel R Weinberger, Hyunsoo Shawn Je
                 <a href = "https://doi.org/10.1016/j.biopsych.2015.08.019"><u>Link</u></a>
               </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+
+      </article>
+
+      <!--
+        - #Skills
+      -->
+
+
+
+      <article class="Skills" data-page="Skills">
+
+        <header>
+          <h2 class="h2 article-title">Skills</h2>
+        </header>
+
+          <p>
+            <b>Neuroscience</b>- Confocal Microscopy, Fluorescence Immunohistochemstry, Genotyping, Mammalian Cell Culture, Molecular Cloning, PCR, qPCR, 
+            Mice Behavioral Assays, Optogenetics, Stereotaxic Surgery, Western Blot.
+
+          </p>
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Courses and Certifications</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Introduction to Git and Github</h4>
+
+              <span>Coursera (Google) (2024)</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Deep Learning in Neuroscience</h4>
+
+              <span>Neuromatch Academy (2021)</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Applied Machine Learning in Python</h4>
+
+              <span>Coursera (University of Michigan) (2019)</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Fundamentals of Computing Specialization</h4>
+
+              <span>Coursera (Rice University) (2018)</span>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Python for Everybody Specialization</h4>
+
+              <span>Coursera (University of Michigan) (2018)</span>
 
             </li>
 
