edited skills page

--- a/index.html
+++ b/index.html
@@ -625,9 +625,7 @@
         - #Skills
       -->
 
-
-
-      <article class="Skills" data-page="Skills">
+      <article class="skills" data-page="skills">
 
         <header>
           <h2 class="h2 article-title">Skills</h2>
@@ -688,12 +686,6 @@
           </ol>
 
         </section>
-
-        <p>
-          <b>Neuroscience</b>- Confocal Microscopy, Fluorescence Immunohistochemstry, Genotyping, Mammalian Cell Culture, Molecular Cloning, PCR, qPCR, 
-          Mice Behavioral Assays, Optogenetics, Stereotaxic Surgery, Western Blot.
-
-        </p>
 
       </article>
 
