--- a/index.html
+++ b/index.html
@@ -603,6 +603,83 @@
           <h2 class="h2 article-title">Skills</h2>
         </header>
 
+        <section class="service">
+
+          <h3 class="h3 service-title">Technical Skills</h3>
+
+          <ul class="service-list">
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <ion-icon name="flask-outline"></ion-icon>
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Molecular Neuroscience</h4>
+
+                <p class="service-item-text">
+                  AAV/Lentivirus Production, Confocal Microscopy, Fluorescence Immunohistochemstry, Genotyping, In-situ Hybridization, 
+                  Knockdown and Over-expression Assays, Mammalian Cell Culture (HEK293T and Mouse Primary Neurons), Molecular Cloning, 
+                  Nucleic Acid Extraction, Patch Clamp Electrophysiology, PCR, qPCR, Western Blot.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Web development</h4>
+
+                <p class="service-item-text">
+                  High-quality development of sites at the professional level.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Mobile apps</h4>
+
+                <p class="service-item-text">
+                  Professional development of applications for iOS and Android.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Photography</h4>
+
+                <p class="service-item-text">
+                  I make high-quality photos of any category at a professional level.
+                </p>
+              </div>
+
+            </li>
+
+          </ul>
+
+        </section>
+        
+
         <section class="timeline">
 
           <div class="title-wrapper">
