--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <ion-icon name="flask-outline" size="large"></ion-icon>
+                <ion-icon name="flask-outline" size="large" color="blue"></ion-icon>
               </div>
 
               <div class="service-content-box">
