added systems neuroscience section

--- a/index.html
+++ b/index.html
@@ -630,14 +630,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <ion-icon name="paw-outline" size="large"></ion-icon>
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">System Neuroscience</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Histology, Fiber Photometry, Functional Ultrasound Imaging, In-vivo electrophysiology (single unit recording/LFP), Mice Behavioural Assays, Optogenetics, Stereotaxic Surgery.
                 </p>
               </div>
 
