added open to opportunities section

--- a/index.html
+++ b/index.html
@@ -196,6 +196,85 @@
           </p>
         </section>
 
+                <!--
+          - service
+        -->
+
+        <section class="service">
+
+          <h3 class="h3 service-title">Open to opportunities</h3>
+
+          <ul class="service-list">
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-design.svg
+                " alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Field Application Scientist</h4>
+
+                <p class="service-item-text">
+                  Microscopy, electrophysiology, DNA amplification/sequencing devices.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Scientist</h4>
+
+                <p class="service-item-text">
+                  Industry science, in-vivo applications, mice models.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Consultancy</h4>
+
+                <p class="service-item-text">
+                  Bespoke behavioral platforms, data analysis.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Technical Writing</h4>
+
+                <p class="service-item-text">
+                  Life science applications, open source platforms.
+                </p>
+              </div>
+
+            </li>
+
+          </ul>
+
+        </section>
+
          <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
