updated icons for open to opportunities section

--- a/index.html
+++ b/index.html
@@ -187,7 +187,6 @@
           <p>
             I am an experienced neuroscientist with a strong publication record and a background in molecular, cellular and systems neuroscience. 
             I am versatile in a wide variety of traditional and cutting edge neuroscience techniques, including molecular biology, microscopy, animal behaviour, electrophysiology and optogenetics (10+years wet lab experience). 
-            I am looking to transition to an industry role as a field application scientist or scientist.
           </p>
 
           <p>
@@ -209,15 +208,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <ion-icon name="pulse-outline" size = large></ion-icon>
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Field Application Scientist</h4>
 
                 <p class="service-item-text">
-                  Microscopy, electrophysiology, DNA amplification/sequencing devices.
+                 Imaging, electrophysiology, DNA sequencing.
                 </p>
               </div>
 
@@ -226,7 +224,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <ion-icon name="flask-outline" size = "large"></ion-icon>
               </div>
 
               <div class="service-content-box">
@@ -242,7 +240,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <ion-icon name="analytics-outline" size = "large"></ion-icon>
               </div>
 
               <div class="service-content-box">
@@ -258,7 +256,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <ion-icon name="document-text-outline" size = "large"></ion-icon>
               </div>
 
               <div class="service-content-box">
