--- a/index.html
+++ b/index.html
@@ -723,14 +723,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <ion-icon name="analytics-outline" size = "large"></ion-icon>
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Data Science</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  DeepLabCut, Graphpad Prism, Jupyter Notebook, Matplotlib, Moseq, Python, Pandas, Scikit-learn, Scipy, Seaborn, Numpy.
                 </p>
               </div>
 
@@ -739,14 +739,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <ion-icon name="print-outline" size = "large"></ion-icon>
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Office Tools</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Adobe Illustrator and Photoshop, Github, Discord, Google Suite, Microsoft Office (Excel, Onenote, Outlook, Powerpoint, Word), Slack, Zoom.
                 </p>
               </div>
 
