updated skills section

--- a/index.html
+++ b/index.html
@@ -696,8 +696,8 @@
                 <h4 class="h4 service-item-title">Molecular Neuroscience</h4>
 
                 <p class="service-item-text">
-                  AAV/Lentivirus Production, Confocal Microscopy, Fluorescence Immunohistochemstry, Genotyping, In-situ Hybridization, 
-                  Knockdown and Over-expression Assays, Mammalian Cell Culture (HEK293T and Mouse Primary Neurons), Molecular Cloning, 
+                  AAV/Lentivirus Production, Genotyping, Knockdown and Over-expression Assays, 
+                  Mammalian Cell Culture (HEK293T and Mouse Primary Neurons), Molecular Cloning, 
                   Nucleic Acid Extraction, Patch Clamp Electrophysiology, PCR, qPCR, Western Blot.
                 </p>
               </div>
@@ -714,7 +714,8 @@
                 <h4 class="h4 service-item-title">System Neuroscience</h4>
 
                 <p class="service-item-text">
-                  Histology, Fiber Photometry, Functional Ultrasound Imaging, In-vivo electrophysiology (single unit recording/LFP), Mice Behavioural Assays, Optogenetics, Stereotaxic Surgery.
+                  Confocal Microscopy, Histology, Fiber Photometry, Fluorescence Immunohistochemstry, Functional Ultrasound Imaging, 
+                  In-situ Hybridization, In-vivo electrophysiology (single unit recording/LFP), Mice Behavioural Assays, Optogenetics, Stereotaxic Surgery.
                 </p>
               </div>
 
