change portfolio project categories

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
               <a href="#">
 
                 <figure class="project-img">
@@ -903,7 +903,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="Data Analysis">
               <a href="#">
 
                 <figure class="project-img">
@@ -921,7 +921,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="Random">
               <a href="#">
 
                 <figure class="project-img">
