--- a/index.html
+++ b/index.html
@@ -903,6 +903,42 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-1.png" alt="blah" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">blah</h3>
+
+                <p class="project-category">Behaviour Setups</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-2.png" alt="yay" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">yay</h3>
+
+                <p class="project-category">Behaviour Setups</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="Data Analysis">
               <a href="#">
 
