--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Behaviour Setups</button>
             </li>
 
             <li class="filter-item">
@@ -868,7 +868,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Behaviour Setups</button>
               </li>
 
               <li class="select-item">
@@ -921,7 +921,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
               <a href="#">
 
                 <figure class="project-img">
@@ -934,7 +934,7 @@
 
                 <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Behaviour Setups</p>
 
               </a>
             </li>
@@ -957,7 +957,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
               <a href="#">
 
                 <figure class="project-img">
@@ -970,12 +970,12 @@
 
                 <h3 class="project-title">DSM.</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Behaviour Setups</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
               <a href="#">
 
                 <figure class="project-img">
@@ -988,7 +988,7 @@
 
                 <h3 class="project-title">MetaSpark</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Behaviour Setups</p>
 
               </a>
             </li>
