trying new fix for portfolio pages not coming up

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Behaviour Setups</button>
+              <button data-filter-btn>Behaviour</button>
             </li>
 
             <li class="filter-item">
@@ -868,7 +868,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Behaviour Setups</button>
+                <button data-select-item>Behaviour Setup</button>
               </li>
 
               <li class="select-item">
@@ -921,7 +921,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
+            <li class="project-item  active" data-filter-item data-category="behaviour setup">
               <a href="#">
 
                 <figure class="project-img">
@@ -957,7 +957,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
+            <li class="project-item  active" data-filter-item data-category="behaviour setup">
               <a href="#">
 
                 <figure class="project-img">
@@ -975,7 +975,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Behaviour Setups">
+            <li class="project-item  active" data-filter-item data-category="behaviour setup">
               <a href="#">
 
                 <figure class="project-img">
