fixed spelling mistake in data-filter-btn

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Behaviour</button>
+              <button data-filter-btn>Behaviour Setup</button>
             </li>
 
             <li class="filter-item">
