fixed spelling mistake in project category

--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
 
                 <h3 class="project-title">Fundo</h3>
 
-                <p class="project-category">Behaviour Setups</p>
+                <p class="project-category">Behaviour Setup</p>
 
               </a>
             </li>
@@ -970,7 +970,7 @@
 
                 <h3 class="project-title">DSM.</h3>
 
-                <p class="project-category">Behaviour Setups</p>
+                <p class="project-category">Behaviour Setup</p>
 
               </a>
             </li>
@@ -988,7 +988,7 @@
 
                 <h3 class="project-title">MetaSpark</h3>
 
-                <p class="project-category">Behaviour Setups</p>
+                <p class="project-category">Behaviour Setup</p>
 
               </a>
             </li>
