--- a/index.html
+++ b/index.html
@@ -910,9 +910,8 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <video autoplay muted></video>
-                  <source src = "./assets/images/deeplabcut-face.webm" type="video/webm">
-                </video>
+                  
+                  <img src="./assets/images/deeplabcut-face.webp" alt="Deeplabcut labelling of facial features" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">DeepLabCut</h3>
